# npdict

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt  sparse_arrays.rst
npdict/: __init__.py  exceptions.py  sparse.py  utils.py  wrap.py
test/: test_1d.py  test_io.py  test_sparse.py  test_wrap.py
