[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npdict"
version = "0.0.2"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "A Python dictionary wrapper for numpy arrays"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["dictionary", "numpy"]
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
dependencies = ["numpy", "sparse", "typing-extensions"]

[project.urls]
Repository = "https://github.com/stephenhky/npdict"
Issues = "https://github.com/stephenhky/npdict/issues"

[tool.setuptools]
packages = ["npdict"]
zip-safe = false

[project.optional-dependencies]
test = ["pytest"]
